stack.json
{
    "Resources": {
        "AppNode": {
            "Type": "AWS::IAM::User",
            "Properties": {
                "InstanceType": "t2.micro",
                "AvailabilityZone": "us-east-1",
                "ImageId": "ami-0a0ddd875a1ea2c7f",
                "KeyName": "EC2",
                "SecurityGroups": [
                    {
                        "Ref": "AppNodeSG"
                    }
                ]
            }
        },
        "AppNodeSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Setting up the security ports so that the services can run",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "2375",
                        "ToPort": "2375",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "3000",
                        "ToPort": "3000",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "DatabaseInstance": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "DBName": "blog",
                "Engine": "MySQL",
                "MasterUsername": "bloguser",
                "MasterUserPassword": "password123",
                "DBInstanceClass": "db.t2.micro",
                "AllocatedStorage": "5",
                "DBSecurityGroups": [
                    {
                        "Ref": "DatabaseSG"
                    }
                ]
            }
        },
        "DatabaseSG": {
            "Type": "AWS::RDS::DBSecurityGroup",
            "Properties": {
                "GroupDescription": "Security Group for RDS public access",
                "DBSecurityGroupIngress": [
                    {
                        "CIDRIP": "0.0.0.0/0"
                    }
                ]
            }
        }
    }
}
